--- a/public/metro/style.css
+++ b/public/metro/style.css
@@ -3446,8 +3446,8 @@ Horezantal Menu(new in v1.2)
 
 .header.navbar .hor-menu ul.nav li > a {
   font-size: 14px;
-  padding: 10px 20px;
-  margin-top: 20px;
+  padding: 20px 20px;
+  /*margin-top: 20px;*/
   font-family: "Open sans", arial;
 }
 
