--- a/public/Elegantic/css/all.css
+++ b/public/Elegantic/css/all.css
@@ -396,22 +396,23 @@ a:hover{text-decoration:underline;}
 	font-size: 18px;
 	line-height: 28px;
 	display: table-cell;
-	height: 100%;
+	height: 370px;
 	vertical-align: middle;
 	background-color: rgba(0,0,0,0.4);
 	padding-left: 20px;
 	padding-bottom: 20px;
 	padding-top: 20px;
+	padding-right: 20px;
 	opacity : 0.8;
 	border-radius: 10%;
 }
 .slide-info  h1 {
     font: bold 34px 'Open Sans', Arial, Helvetica, sans-serif;
-    margin: 0 0 50px;
+    margin: 0 0 40px;
     color: #fff;
 }
 .slide-info p {
-	margin: 0 0 66px;
+	margin: 0 0 30px;
 	color: #fff;
 }
 .promo .bx-pager {
